assets/style.css
/* Box-sizing reset: http://w3bits.com/?p=3225 */

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}


body {
  margin: 0;
  padding: 0;
  color: rgba(0, 0, 0, .9);
  font-family: 'Quicksand', sans-serif;
}

div:focus {
  outline: none;
}

strong {
  font-weight: 700;
  color: #ff2d55;
}

header a:hover, header a.active, header a:hover, button i {
  color: #ff2d55;
}

p.quoted-text {
  font-style: italic;
  padding: 0 20px;
  margin: 20px 0 40px 0;
  border-left: 2px solid #ff2d55;
}

img {
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  user-select: none;
  border-radius: 10px;
}

img.icon {
  width: 14px !important;
  height: auto !important;
  box-shadow: none !important;
  border-radius: 0;
}

img.icon-2x {
  width: 28px !important;
  border-radius: 0;
}

img.icon-3x {
  width: 42px !important;
  border-radius: 0;
}

img.icon-4x {
  width: 56px !important;
  border-radius: 0;
}

img.icon-5x {
  width: 70px !important;
  border-radius: 0;
}

a {
  text-decoration: underline #ff2d55;
  color: #ff2d55;
  cursor: pointer;
}

button {
  padding: 10px;
  font-family: 'Quicksand', sans-serif;
  font-size: 0.9em;
  color: rgba(0, 0, 0, .9);
  border: 1px solid #ff2d55;
  border-radius: 5px;
  background-color: rgba(255,255,255,.9);
  min-width: 100px;
}

button i {
  margin-left: 10px;
}

button:hover {
  color: #ffffff;
  background-color: #ff2d55;
}

button:hover i {
  color: #ffffff;
}

h1 {
  margin: 10px 0;
  color: rgba(0, 0, 0, .9);
  font-family: 'Montserrat', sans-serif;
}

h1 span:nth-child(1),
h2 span:nth-child(1) {
  font-weight: 100;
}


h1 span:nth-child(2),
h2 span:nth-child(2) {
  color: #ff2d55;
  text-transform: uppercase;
}

h3 {
  font-family: 'Quicksand', sans-serif;
}

.divide-border {
  width: 18px;
  height: 5px;
  background-color: #ff2d55;
}

ul > li {
  list-style-type: none;
}

::selection {
  background-color: #ff2d55;
  color: #ffffff;
}

header {  
  position: fixed;
  top: 0;
  z-index: 2;
  background-color: #fff;
  overflow: hidden;
  width: 100vw;
  padding: 20px;
}

header .logo h3 span:nth-child(2) {
  text-transform: uppercase;
  color: #ff2d55;
}

header .logo {
  margin-top: 15px;
  float: left;
  font-size: 1.2em;
}

header .logo * {
  display: inline;
  vertical-align: middle;
}

header .logo img {
  height: 38px;
  border-radius: 0;
}

.header-right {
  margin: 0;
  float: right;
  padding-top: 20px;
}

header a {
  color: #000;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  padding-right: 10px;
}

@media screen and (max-width: 767px) {
  header {
    height: 65px;
  }
  header .logo {
    margin-top: 0;
    float: left;
    font-size: 1em;
  }
  header .logo img {
    height: 36px;
    /*width: 130px;*/
  }
  .header-right {
    padding-top: 14px;
  }
  header a {
    padding-right: 0;
  }
}

@media screen and (max-width: 320px) {
  header .logo img {
    display: none;
  }
}

table {
  width: 100%;
}

td {
  padding: 10px 10px 10px 0;
  vertical-align: top;
}

td:first-child {
  color: #ff2d55;
  width: 35%;
}

td:nth-child(2) {
  width: 60%;
}

td > p {
  margin: 0 0 15px 0;
}

form > div {
  margin: 20px 0;
}

form > div > h3,
form > div > input {
  display: inline-block;
}

input {
  font-size: 18px;
  padding: 10px 10px 10px 5px;
  font-family: 'Quicksand', sans-serif;
  width: 40%;
  border: none;
  border-bottom: 1px solid gray;
}

input:focus {
  outline:none;
  border-color: #ff2d55;
}

/* General */

.page-wrapper {
  padding-bottom: 50px;
}

.center {
  margin: 0 auto;
  max-width: 768px;
}

.footer p {
  font-size: small;
  margin: 20px auto;
  text-align: center;
}

.footer p i {
  color: #ff2d55;
}

@media screen and (max-width: 768px) {
  .center {
    padding: 0 10px;
  }
}

.top-border,
.bottom-border {
  z-index: 99;
  position: fixed;
  padding: 0;
  width: 100vw;
  height: 15px;
}

@media screen and (max-width: 768px) {
  .top-border,
  .bottom-border {
    height: 10px;
  }
}

.top-border {
  top: 0;
  background-color: #000000;
}

.bottom-border {
  bottom: 0;
  background-color: #ff2d55;
}

.left, .right {
  display: inline-block;
}

.main .section {
  padding-top: 100px;
}

.page-wrapper .main {
  margin: 0 auto;
  width: 100vw;
  max-width: 768px;
  scroll-behavior: smooth;
}

@media screen and (max-width: 768px) {
  .page-wrapper .main {
    padding: 0 20px;
  }
}

/* Index */

#myRole {
  color: #ff2d55;
}

.masonry.center {
  padding-top: 100px;
  column-count: 2;
  column-gap: 1em;
}

@media screen and (max-width: 767px) {
  .masonry.center {
    max-width: 100vw;
    column-count: 1;
  }
}

.item {
  display: inline-block;
  margin: 0 0 1em;
  width: 100%;
  position: relative;
  overflow: hidden;
}

.item img {
  opacity: 0.8;
  width: 100%;
  -webkit-transform: scale(1);
  transform: scale(1);
  -webkit-transition: .3s ease-in-out;
  transition: .3s ease-in-out;
  box-shadow: 1px 1px 2px 1px #c9c9c9;
}

.item:hover img {
  width: 100%;
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
}

.item .img-caption {
  position: absolute;
  background: rgba(255,255,255,0.8);
  text-align: center;
  padding: 0 5px;
  top: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  opacity: 0;
  transition: .3s ease-in-out;
}

.item:hover .img-caption {
  opacity: 1;
}

.item .img-caption h3 {
  color: #ff2d55;
}

.item .img-caption p {
  color: rgba(0, 0, 0, .6);
}

.item .img-caption img.icon {
  margin: 0 auto;
}

@media only screen and (max-width: 768px) {
  .item .img-caption {
    opacity: 1;
    height: 50px;
    top: auto;
    bottom: 0;
  }
  .item .img-caption h3,
  .item .img-caption p {
    opacity: 1;
  }
}

/* Contact */
#yourName {
  margin-top: -20px;
}

#socialMedia > a > i {
  display: inline-block;
  font-size: 1.5em;
  width: 15%;
  color: rgba(0, 0, 0, .6);
}

#socialMedia > a > i:hover {
  color: #ff2d55;
}

/* Portfolio */
.align-center {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.banner {
  width: 100vw;
  height: 100vh;
  padding: 20px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  margin: 0;
}

.banner::after {
  width: 100vw;
  height: 100vh;
  content: "";
  position: absolute;
  left: 0;
  -webkit-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  -webkit-transform: translateZ(0) scale(1, 1);
  background-color: rgba(255,255,255,0.6);
}

.banner:hover::after {
  background-color: rgba(255,255,255,0.8);
}

.banner .title {
  z-index: 1;
}

.hero-title {
  text-align: left;
}

.hero-title h1 {
  font-size: 5em;
  font-weight: 700;
  text-transform: uppercase;
}

.hero-title p {
  font-size: 1.2em;
}

.hero-title p strong {
  color: #ff2d55;
}

#portfolio-title {
   margin-top: 180px;
}

@media screen and (max-height: 640px) {
  .banner::after {
    background-color: rgba(255,255,255,0.8);
  }
}

h2 {
  text-align: center;
}

@media screen and (min-width: 768px) {
  .section .item {
    width: calc((768px / 4) - 40px);
    height: calc((768px / 4) - 40px);
    margin: 10px;
  }
}

@media screen and (max-width: 767px) and (min-width: 560px) {
  .section .item {
    width: 30vw;
    height: 30vw;
    margin: 10px 2vw;
  }
  .item.img-small .img-caption {
    top: 0;
  }
}

@media screen and (max-width: 559px) {
  .section .item {
    width: 50vw;
    height: 50vw;
    margin: 10px;
  }
  .item.img-small .img-caption {
    top: 0;
  }
}

.img-small img {
  width: 100%;
  height: 100%;
  /*border-radius: 50%;*/
}

.item.img-small .img-circle-caption {

}

.img-circle .img-caption h3 {
  color: rgba(0,0,0,.9);
}

.section.center img {
  width: 100%;
  margin: 20px 0;
  box-shadow: 1px 1px 2px 1px #c9c9c9;
}

.no-shadow {
  box-shadow: none !important;
}

.section.center .image-wrapper { 
  width: 100%;
  margin: 40px 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.section.center .image-wrapper img {
  display: inline-block;
  width: 40%;
  margin: 0 20px;
}

.section.center .image-wrapper img.app-icon {
  width: 20%;
}


@media screen and (max-width: 767px) {
  .section.center .image-wrapper { 
    width: 100%;
    display: inherit;
    text-align: center;
  }

  .section.center .image-wrapper img {
    width: 100%;
    display: block;
    margin: 20px 0 0 0;
  }

  .section.center .image-wrapper img.app-icon {
    width: 40%;
    margin: 20px auto;
  }
}

.section.center > p {
  text-align: justify;
  line-height: 1.2em;
}

.iframe-wrapper {
  width: 100%;
  text-align: center;
  margin: 20px 0 60px 0;
}

.iframe-wrapper > .iframe-video {
  width: 100%;
  height: 430px;
}

@media screen and (max-width: 768px) {
  .iframe-wrapper > .iframe-video {
    height: 56vw;
  }
}

.vertical-viewer {
  width: 100%;
  height: calc(80vw * 297 / 210);
}

.horizontal-viewer {
  width: 100%;
  height: calc(100vw / 16 * 9);
  min-height: 200px;
}


@media screen and (min-width: 768px) {
  .vertical-viewer {
    width: 50%;
    max-width: 384px;
    height: calc(384px * 297 / 210);
  }
  .horizontal-viewer {
    width: 100%;
    height: calc(768px / 16 * 9);
  }
}

